--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -47,11 +47,11 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 1200 120"
                 preserveAspectRatio="none"
-                class="w-full"
+                class="w-full "
             >
                 <path
                     d="M0,0 L600,100 L1200,0 L1200,120 L0,120 Z"
-                    class="bg-bgDark2 fill-bgDark2"></path>
+                    class="bg-bgDark2 fill-bgDark2 border-2 border-white"></path>
             </svg>
         </div>
     </div>
