--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 import Layout from '../layouts/Layout.astro'
 import { Hero } from '../components/Hero.jsx'
 import { Navbar } from '../components/Navbar.jsx'
-import { Features1 } from '../components/Features1.jsx'
+import Features1  from '../components/Features1.astro'
 import { Features2 } from '../components/Features2.jsx'
 import { Testimonials } from '../components/Testimonials.jsx'
-import { FeaturesDiagonal } from '../components/FeaturesDiagonal.jsx'
+import FeaturesDiagonal from '../components/FeaturesDiagonal.astro'
 import { Pricing } from '../components/Pricing.jsx'
 import { FAQ } from '../components/FAQ.jsx'
 import { Brands } from '../components/Brands.jsx'
@@ -20,10 +20,8 @@ import '../styles/Diagonals.css'
 <Layout title="Technodevs">
   <Navbar client:load />
   <Splash />
-  <!-- <Hero client:load /> -->
-  <Features1 client:load />
-  <!-- <Features2 client:load /> -->
-  <FeaturesDiagonal client:load />
+  <Features1 />
+  <FeaturesDiagonal />
   <Pricing client:load />
   <Brands client:load />
   <Testimonials client:load />
