--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,8 @@ import "@fontsource/inter/600.css";
 import "@fontsource/inter/700.css";
 import "@fontsource/inter/800.css";
 import "@fontsource/inter/900.css";
+import Navbar from "../components/Navbar.astro";
+import { Footer } from "../components/Footer";
 
 export interface Props {
   title: string;
@@ -28,7 +30,9 @@ const { title } = Astro.props;
   </head>
   <body class="bg-bgDark2">
     <main aria-label="Main content">
+      <Navbar/>
       <slot />
+      <Footer />
     </main>
     <style is:global>
       html {
