--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import { Hero } from '../components/Hero.jsx'
-import { Navbar } from '../components/Navbar.jsx'
-import Features1  from '../components/Features1.astro'
+import { Features1 } from '../components/Features1.jsx'
 import { Features2 } from '../components/Features2.jsx'
 import { Testimonials } from '../components/Testimonials.jsx'
 import FeaturesDiagonal from '../components/FeaturesDiagonal.astro'
@@ -15,18 +14,17 @@ import { ScrollUpButton } from '../components/ScrollUpButton'
 import  Splash  from '../components/splash.astro'
 import '../styles/Theme.css'
 import '../styles/Diagonals.css'
+import Navbar from '../components/Navbar.astro'
 ---
 
-<Layout title="Desarrollo Web, Software a Medida y Redes Sociales">
-  <Navbar client:load />
+<Layout title="Technodevs">
   <Splash />
-  <Features1 />
-  <FeaturesDiagonal />
+  <Features1 client:load />
+  <!-- <Features2 client:load /> -->
+  <FeaturesDiagonal client:load />
   <Pricing client:load />
   <Brands client:load />
   <Testimonials client:load />
   <Blog />
   <FAQ client:load /> 
-  <Footer />
-  <ScrollUpButton client:load />
 </Layout>
