subo primera parte de storyblok

--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -7,6 +7,7 @@ import feature1 from "../assets/images/image-innovation-2048x2048.webp";
 import feature2 from "../assets/images/cohete.webp";
 import feature3 from "../assets/images/pc-ia.webp";
 import feature4 from "../assets/images/code.webp";
+import feature5 from "../assets/images/centerpadel.png";
 ---
 
 <section
