--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,11 +18,11 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicontech.png" />
     <meta name="generator" content={Astro.generator} />
     <meta
-      name="description"
-      content="Dark themed website template built on AstroJS, designed for fictional startup"
+      name="Technodevs"
+      content="Creamos sitios web modernos, rápidos y seguros. Diseñados a medida para potenciar tu negocio y ofrecer la mejor experiencia a tus usuarios."
     />
     <title>{title}</title>
   </head>
