--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import { Hero } from '../components/Hero.jsx'
-import { Features1 } from '../components/Features1.jsx'
+import Features1 from '../components/Features1.astro'
 import { Features2 } from '../components/Features2.jsx'
 import { Testimonials } from '../components/Testimonials.jsx'
 import FeaturesDiagonal from '../components/FeaturesDiagonal.astro'
