fix client load

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,9 @@ import Navbar from '../components/Navbar.astro'
 
 <Layout title="Technodevs">
   <Splash />
-  <Features1 client:load />
+  <Features1 />
   <!-- <Features2 client:load /> -->
-  <FeaturesDiagonal client:load />
+  <FeaturesDiagonal />
   <Pricing client:load />
   <Brands client:load />
   <Testimonials client:load />
