agregando proyectos desde api

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -8,6 +8,7 @@ const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más d
 
 <section
   class="w-full flex justify-center pt-16 mb-16 lg:mb-32 bg-bgDark2 relative"
+  id="blog"
 >
   <div class="container">
     <div class="justify-center flex flex-col lg:text-left mb-16 mx-auto">
