--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -10,13 +10,11 @@ import feature4 from "../assets/images/code.webp";
 import feature5 from "../assets/images/centerpadel.png";
 ---
 
-<section
-  class="w-full bg-bgDark2 pt-24 mb-8 sm:mb-24 md:pt-[12vw] lg:pt-16"
-  id="features"
->
+<section class="w-full bg-bgDark2 pt-24 mb-8 sm:mb-24 md:pt-[12vw] lg:pt-16">
   <div class="w-screen flex justify-center relative">
     <div
       class="w-11/12 sm:w-4/5 lg:w-[90%] xl:w-[80%] 2xl:w-[1200px] mx-auto grid gap-4 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 z-10 rounded-xl main-border-gray hero-dashboard-border-gradient bg-bgDark1 bg-opacity-50 backdrop-blur-sm mt-[-50px] lg:mt-[-150px] xl:mt-[-250px]"
+      id="features"
     >
       <div
         class="p-4 flex flex-col gap-4 border-primaryText border rounded-xl m-4 bg-blackPrimary"
@@ -56,6 +54,7 @@ import feature5 from "../assets/images/centerpadel.png";
 
   <div
     class="flex flex-wrap items-center 2xl:w-[1450px] xl:w-[1300px] w-11/12 mx-auto md:pl-4 xl:pr-16 xl:pl-16 pt-28 xl:pt-[100px]"
+    id="about"
   >
     <div class="w-full lg:w-1/2 mb-12 lg:mb-0">
       <div class="mx-auto lg:mx-auto w-11/12 sm:w-4/5 md:w-3/4 lg:w-unset">
@@ -79,7 +78,7 @@ import feature5 from "../assets/images/centerpadel.png";
           impacto significativo.
         </p>
         <a href="#FAQ" class="w-[210px] h-12 contained-button mr-10">
-            Contáctanos
+          Contáctanos
         </a>
       </div>
     </div>
