--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,11 +1,14 @@
 ---
-import { GithubIcon } from '../assets/icons/GithubIcon';
+import { GithubIcon } from "../assets/icons/GithubIcon";
+import { BiLogoInstagram } from "react-icons/bi";
+import { FaLinkedin } from "react-icons/fa";
+import { FaSquareBehance } from "react-icons/fa6";
 
 const navbarLinks = [
-  { label: "Nosotros", href: "/#home", ariaLabel: "Home" },
   { label: "Servicios", href: "/#features", ariaLabel: "Features" },
+  { label: "Nosotros", href: "/#about", ariaLabel: "Home" },
   { label: "Planes", href: "/#pricing", ariaLabel: "Pricing" },
-  { label: "Blog", href: "/#feedback", ariaLabel: "Feedback" },
+  { label: "Blog", href: "/#blog", ariaLabel: "blog" },
   { label: "Contacto", href: "/#FAQ", ariaLabel: "FAQ" },
 ];
 ---
@@ -14,7 +17,9 @@ const navbarLinks = [
   class="w-full h-20 flex flex-col justify-center items-center fixed bg-bgDark1 lg:bg-bgDarkTransparent z-40 lg:backdrop-blur-xl"
   aria-label="Main navigation"
 >
-  <div class="2xl:w-[1280px] xl:w-10/12 w-11/12 flex justify-between items-center relative">
+  <div
+    class="2xl:w-[1280px] xl:w-10/12 w-11/12 flex justify-between items-center relative"
+  >
     <a href="/#home" aria-label="Home">
       <div class="flex justify-start items-center grow basis-0">
         <div>
@@ -23,52 +28,120 @@ const navbarLinks = [
       </div>
     </a>
     <div class="hidden lg:flex h-full pl-12 pb-2">
-      {navbarLinks.map(({ href, label, ariaLabel }) => (
-        <a
-          class="text-white lg:text-base text-2xl leading-6 mr-4 ml-4 2xl:mr-6 2xl:ml-6 cursor-pointer font-normal lg:font-medium hover:scale-110 transition h-full pt-2"
-          href={href}
-          aria-label={ariaLabel}
-        >
-          {label}
-        </a>
-      ))}
+      {
+        navbarLinks.map(({ href, label, ariaLabel }) => (
+          <a
+            class="text-white lg:text-base text-2xl leading-6 mr-4 ml-4 2xl:mr-6 2xl:ml-6 cursor-pointer font-normal lg:font-medium hover:scale-110 transition h-full pt-2"
+            href={href}
+            aria-label={ariaLabel}
+          >
+            {label}
+          </a>
+        ))
+      }
     </div>
-    <div class="grow basis-0 justify-end hidden lg:flex">
+    <div class="grow basis-0 justify-end hidden lg:flex gap-4">
       <a
-        class="text-white main-border-gray rounded-xl bg-bgDark2 hover:bg-bgDark3 border-gray-700 pl-6 pr-8 pt-2 pb-2 text-sm flex"
-        href="https://github.com/matt765/Tidestream"
+        href="https://www.instagram.com/agencia.technodevs/"
         target="_blank"
-        aria-label="source code"
+        rel="noopener noreferrer"
+        aria-label="Instagram"
       >
-        <GithubIcon />
-        <span class="pt-px">Contáctanos</span>
+        <BiLogoInstagram
+          className="text-white text-2xl hover:text-gray-400 transition"
+        />
+      </a>
+      <a
+        href="https://www.linkedin.com/company/technodevsweb/"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="LinkedIn"
+      >
+        <FaLinkedin
+          className="text-white text-2xl hover:text-gray-400 transition"
+        />
+      </a>
+      <a
+        href="https://www.behance.net/technodevs"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Behance"
+      >
+        <FaSquareBehance
+          className="text-white text-2xl hover:text-gray-400 transition"
+        />
       </a>
     </div>
-    <div class="lg:hidden flex flex-col px-2 py-3 border-solid border border-gray-600 rounded-md cursor-pointer hover:bg-bgDark2">
+    <div
+      id="hamburgerMenu"
+      class="lg:hidden flex flex-col px-2 py-3 border-solid border border-gray-600 rounded-md cursor-pointer hover:bg-bgDark2"
+    >
       <div class="w-5 h-0.5 bg-gray-500 mb-1"></div>
       <div class="w-5 h-0.5 bg-gray-500 mb-1"></div>
       <div class="w-5 h-0.5 bg-gray-500"></div>
     </div>
   </div>
-  
+
   <!-- Mobile navbar -->
-  <div class="flex flex-col mt-16 lg:hidden absolute top-4 left-0 bg-bgDark1 z-50 w-full items-center gap-10 pb-10 border-y border-solid border-bgDark3 pt-10">
-    {navbarLinks.map(({ label, href, ariaLabel }) => (
+  <div
+    id="mobileMenu"
+    class="hidden flex flex-col mt-16 lg:hidden absolute top-4 left-0 bg-bgDark1 z-50 w-full items-center gap-10 pb-10 border-y border-solid border-bgDark3 pt-10"
+  >
+    {
+      navbarLinks.map(({ label, href, ariaLabel }) => (
+        <a
+          class="text-white lg:text-base text-2xl leading-6 mr-4 ml-4 2xl:mr-6 2xl:ml-6 cursor-pointer font-normal lg:font-medium hover:scale-110 transition duration-300 h-full pt-2"
+          href={href}
+          aria-label={ariaLabel}
+        >
+          {label}
+        </a>
+      ))
+    }
+    <div class="flex gap-4">
       <a
-        class="text-white lg:text-base text-2xl leading-6 mr-4 ml-4 2xl:mr-6 2xl:ml-6 cursor-pointer font-normal lg:font-medium hover:scale-110 transition duration-300 h-full pt-2"
-        href={href}
-        aria-label={ariaLabel}
+        href="https://www.instagram.com/agencia.technodevs/"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Instagram"
       >
-        {label}
+        <BiLogoInstagram
+          className="text-white text-2xl hover:text-gray-400 transition"
+        />
       </a>
-    ))}
-    <a
-      class="outlined-button pl-6 pr-8 pt-2 pb-2 flex"
-      href="https://github.com/matt765/Tidestream"
-      target="_blank"
-    >
-      <GithubIcon />
-      Source code
-    </a>
+      <a
+        href="https://www.linkedin.com/company/technodevsweb/"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="LinkedIn"
+      >
+        <FaLinkedin
+          className="text-white text-2xl hover:text-gray-400 transition"
+        />
+      </a>
+      <a
+        href="https://www.behance.net/technodevs"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Behance"
+      >
+        <FaSquareBehance
+          className="text-white text-2xl hover:text-gray-400 transition"
+        />
+      </a>
+    </div>
   </div>
 </nav>
+
+<script>
+  const hamburgerMenu = document.getElementById("hamburgerMenu");
+  const mobileMenu = document.getElementById("mobileMenu");
+
+  hamburgerMenu.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+
+  mobileMenu.addEventListener("click", () => {
+    mobileMenu.classList.add("hidden");
+  });
+</script>
