--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,7 +13,8 @@ const navbarLinks = [
 ---
 
 <nav
-  class="w-full h-20 flex flex-col justify-center items-center fixed bg-bgDark1 lg:bg-bgDarkTransparent z-40 lg:backdrop-blur-xl"
+  id="navbar"
+  class="w-full h-20 flex flex-col justify-center items-center fixed z-40 transition-colors duration-300"
   aria-label="Main navigation"
 >
   <div
@@ -133,9 +134,22 @@ const navbarLinks = [
 </nav>
 
 <script>
+  const navbar = document.getElementById("navbar");
   const hamburgerMenu = document.getElementById("hamburgerMenu");
   const mobileMenu = document.getElementById("mobileMenu");
 
+  // Change navbar background on scroll
+  window.addEventListener("scroll", () => {
+    if (window.scrollY > 0) {
+      navbar.classList.add("bg-gray-950/70", "backdrop-blur-md", "shadow-md");
+      navbar.classList.remove("bg-transparent");
+    } else {
+      navbar.classList.add("bg-transparent");
+      navbar.classList.remove("bg-gray-950/70", "backdrop-blur-md", "shadow-md");
+    }
+  });
+
+  // Toggle mobile menu
   hamburgerMenu.addEventListener("click", () => {
     mobileMenu.classList.toggle("hidden");
   });
