--- a/src/components/starfield.astro
+++ b/src/components/starfield.astro
@@ -1,4 +1,4 @@
-<div id="starfield" class="absolute inset-0">
+<div id="starfield" class="absolute inset-0 bg-[#03041f]">
     <canvas id="starfield-canvas"></canvas>
 </div>
 
