--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -85,7 +85,7 @@ const navbarLinks = [
   <!-- Mobile navbar -->
   <div
     id="mobileMenu"
-    class="hidden flex flex-col mt-16 lg:hidden absolute top-4 left-0 bg-bgDark1 z-50 w-full items-center gap-10 pb-10 border-y border-solid border-bgDark3 pt-10"
+    class="flex flex-col mt-16 lg:hidden absolute top-4 left-0 bg-bgDark1 z-50 w-full items-center gap-10 pb-10 border-y border-solid border-bgDark3 pt-10"
   >
     {
       navbarLinks.map(({ label, href, ariaLabel }) => (
