--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -8,13 +8,10 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
 <section class="relative h-full bg-black py-10">
-    <Starfield />
-    <!-- <div id="splash-bg-fallback" class="absolute inset-0 hidden opacity-10">
-        <HeroImage />
-    </div> -->
+    <Starfield/>
     <div class="relative grid h-full place-items-center sm:grid-cols-2">
         <h2
-            class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end"
+            class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end custom-shadow"
         >
             <div
                 class="gradient-text text-center font-extrabold tracking-tighter text-6xl md:text-8xl"
@@ -37,17 +34,17 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
             />
         </div>
     </div>
-    <div class="relative w-screen justify-center mb-[-42px] custom-shadow z-10">
+    <div class="relative w-screen justify-center mb-[-42px] z-10">
             <svg
                 data-name="Layer 1"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 1200 120"
                 preserveAspectRatio="none"
-                class="w-full"
+                class="w-full custom-shadow"
             >
                 <path
                     d="M0,0 L600,100 L1200,0 L1200,120 L0,120 Z"
-                    class="bg-bgDark2 fill-bgDark2"
+                    class="bg-bgDark1 fill-bgDark1"
                     filter="url(#dropShadowExternal)"
                 ></path>
             </svg>
@@ -68,7 +65,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
 <style>
     
     .custom-shadow {
-        filter: drop-shadow(0 -1mm 10mm rgb(200, 200, 200, 0.4));
+        filter: drop-shadow(0 0 20mm rgb(200, 200, 200, 0.4));
     }
     @keyframes float {
         0% {
@@ -81,7 +78,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     }
 
     #astronaut {
-        animation: float linear 5.5s infinite alternate;
+        animation: float linear 8.5s infinite alternate;
     }
 
     @media (prefers-reduced-motion: reduce) {
