--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -44,7 +44,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
             >
                 <path
                     d="M0,0 L600,100 L1200,0 L1200,120 L0,120 Z"
-                    class="bg-bgDark1 fill-bgDark1"
+                    class="bg-blackPrimary fill-blackPrimary"
                     filter="url(#dropShadowExternal)"
                 ></path>
             </svg>
