--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -23,7 +23,7 @@ const navbarLinks = [
     <a href="/#home" aria-label="Home">
       <div class="flex justify-start items-center grow basis-0">
         <div>
-          <img src="./logotech@2x-300x61.png" alt="logo" class="w-[60%]" />
+          <img src="./logotech@2x-300x61.png" alt="logo" class="w-[60%]" loading="eager"/>
         </div>
       </div>
     </a>
