--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -7,7 +7,7 @@ const widths = [450, 800];
 const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
-<section class="relative h-full bg-black py-10">
+<section class="relative h-full py-10">
     <Starfield/>
     <div class="relative grid h-full place-items-center sm:grid-cols-2">
         <h2
