--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -7,6 +7,8 @@ import feature2 from "../assets/images/cohete.webp";
 import feature3 from "../assets/images/pc-ia.webp";
 import feature4 from "../assets/images/code.webp";
 import feature5 from "../assets/images/centerpadel.png";
+import { Image } from "astro:assets";
+
 
 ---
 
@@ -91,37 +93,33 @@ import feature5 from "../assets/images/centerpadel.png";
     >
       <div class="mb-8 lg:mb-0 w-full sm:w-1/2 px-2 lg:px-0">
         <div class="mb-4 py-3 pl-3 pr-2 rounded">
-          <img
-            src={feature1.src}
-            alt="Feature image 1"
+          <Image
+            src={feature1}
+            alt="Mujer iluminada por rayo celeste"
             class="rounded-xl main-border-gray mx-auto sm:mx-unset"
-            aria-label="Feature image 1"
           />
         </div>
         <div class="py-3 pl-3 pr-2 rounded">
-          <img
-            src={feature2.src}
-            alt="Feature image 2"
+          <Image
+            src={feature2}
+            alt="Cohete Despegando"
             class="rounded-xl main-border-gray mx-auto sm:mx-unset"
-            aria-label="Feature image 2"
           />
         </div>
       </div>
       <div class="w-1/2 lg:mt-20 pt-12 lg:pt-0 px-2 hidden sm:inline-block">
         <div class="mb-4 py-3 pl-3 pr-2 rounded-lg">
-          <img
-            src={feature3.src}
-            alt="Feature image 3"
+          <Image
+            src={feature3}
+            alt="Mujer Programando"
             class="rounded-xl main-border-gray"
-            aria-label="Feature image 3"
           />
         </div>
         <div class="py-3 pl-3 pr-2 rounded-lg">
-          <img
-            src={feature4.src}
-            alt="Feature image 4"
+          <Image
+            src={feature4}
+            alt="Codigo de programación"
             class="rounded-xl main-border-gray"
-            aria-label="Feature image 4"
           />
         </div>
       </div>
