--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Navbar from "../components/Navbar.astro";
-import { Footer } from "../components/Footer";
+import Footer from "../components/Footer.astro";
 
 export interface Props {
   title: string;
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="bg-bgDark1">
+<html lang="es" class="bg-bgDark1">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
